--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mysql2": "^2.3.0",
     "sequelize": "^6.6.5",
-    "socket.io": "^4.2.0"
+    "socket.io": "^4.2.0",
+    "uuid": "^8.3.2"
   }
 }
