--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mysql2": "^2.3.0",
+    "node-schedule": "^2.0.0",
     "referral-codes": "^1.0.2",
     "sequelize": "^6.6.5",
     "socket.io": "^4.2.0",
