--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "mysql2": "^2.3.0",
     "node-schedule": "^2.0.0",
+    "redis": "^3.1.2",
     "referral-codes": "^1.0.2",
     "sequelize": "^6.6.5",
     "socket.io": "^4.2.0",
